Making AppNavigation responsive - Fixing z-index of notifications and modals

--- a/src/features/notifications/notifications.css
+++ b/src/features/notifications/notifications.css
@@ -1,4 +1,5 @@
 .notification-container {
+    z-index: 3;
     min-width: var(--size-16);
     position: fixed;
     bottom: 1rem;
@@ -118,8 +119,10 @@
     }
 }
 
-@media (max-width: 410px) {
+@media (max-width: 768px) {
     .notification-container {
+        min-width: var(--size-12);
+
         bottom: 0.5rem;
         right: 0.5rem;
         left: 0.5rem;
