--- a/src/features/shared/components/modal/Modal.css
+++ b/src/features/shared/components/modal/Modal.css
@@ -1,4 +1,6 @@
 .modal-background {
+
+    z-index: 3;
     position: fixed;
     left: 0;
     top: 0;
